loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:2: error: not found: value baggles
  baggles=0
  ^Poucet1:6: error: not found: value baggles
      baggles=baggles+1
      ^Poucet1:9: error: not found: value baggles
  if (baggles>=3){
      ^